--- a/src/app/containers/root/root.component.html
+++ b/src/app/containers/root/root.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>MANO BLOG</h1>
+  <a href (click)=accueil()><img class="logo" alt="logo" src="assets/img/logo.png"/></a>
   <app-header></app-header>
   <router-outlet></router-outlet>
 </div>
